Issue #13573: The csv.writer now uses the repr() for floats rather than str().